# aegisRT

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  benchmark-lean.yaml  benchmark-thorough.yaml  pyproject.toml
aegisrt/: __main__.py  cli.py
aegisrt/audit/: __init__.py  discover.py  findings.py  python_ast.py  rules.py
aegisrt/compliance/: owasp.py
aegisrt/config/: __init__.py  loader.py  models.py  schema.py
aegisrt/converters/: __init__.py  base.py  encoding.py  evasion.py  injection.py  linguistic.py  registry.py
aegisrt/core/: __init__.py  batch_runner.py  benchmark.py  comparison.py  conversation.py  cost_guard.py  diff.py  evidence.py  metrics.py  resistance_profile.py  result.py  runner.py  runtime_controls.py  session.py  severity.py  target_metadata.py  trace_sessions.py  watcher.py
aegisrt/datasets/: advbench_subset.jsonl  dan_variants.jsonl  harmbench_behaviors.jsonl  jailbreak_templates.jsonl  multilingual_seeds.jsonl  registry.py
aegisrt/detectors/: __init__.py  agent_trace.py  base.py  bias.py  hallucination.py  json_schema.py  leakage.py  llm_judge.py  policy.py  regex.py
aegisrt/evaluators/: __init__.py  base.py  confidence.py  score.py  (+2 more)
docs/: architecture.md  config-schema.md  getting-started.md  owasp-coverage.md  plugin-api.md  report-schema.md
examples/: benchmark-openai-vs-anthropic.yaml  custom_prompts.jsonl  custom_prompts_dataset.yaml  custom_prompts_inline.yaml  custom_prompts_template.yaml  redteam-with-datasets.yaml  sonnet-judge.yaml  sonnet-quick.yaml  starter_injection_prompts.jsonl  starter_rag_prompts.jsonl  starter_tool_misuse_prompts.jsonl
tests/: conftest.py  test_adaptive_generator.py  test_attacker_wiring.py  test_audit.py  test_batch_runner.py  test_benchmark.py  test_cli.py  test_compliance.py  test_config.py  test_converters.py  test_datasets.py  test_detectors.py  test_diff_review.py  test_end_to_end.py  test_evaluators.py  test_examples.py  test_generators.py  test_metrics.py  test_probes.py  test_redteam_probes.py  test_reports.py  test_runner_contract.py  test_severity.py  test_storage.py  test_targets.py  test_trace_sessions.py  test_utils.py  test_web_app.py
(+97 files in other folders)
